[project]
name = "python-data-science"
version = "0.1.0"
description = ""
authors = [
    {name = "Kelly Pierce"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotnine (>=0.14.6,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
